--- a/android-developer.html
+++ b/android-developer.html
@@ -73,7 +73,7 @@ learning,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Android Developer at Mindera.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/C06813D3EE'>Crossroads Recruitment - Jobs: Senior Android Developer - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/C06813D3EE'>Crossroads Recruitment - Jobs: Senior Android Developer - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Senior Android Developer at Crossroads Recruitment.</p>
 <hr/>
@@ -82,7 +82,7 @@ learning,?...</p>
 <p>Jul 18, 2019 ... Apply online for the job of Android Developer (M/F) #Kotlin - Paris (relocation 
 accepted) at Kapten.</p>
 <hr/>
-<h5><a href='https://wheely.workable.com/j/585D1647A6?viewed=true'>Android Developer - Apply online - Wheely - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wheely.workable.com/j/585D1647A6?viewed=true'>Android Developer - Apply online - Wheely - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 ??. ????? ... Apply online for the job of Android Developer at Wheely.</p>
 <hr/>
@@ -130,7 +130,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oVqu7fwG'>The Havas Group Careers - Android Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oVqu7fwG'>The Havas Group Careers - Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -146,7 +146,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -194,7 +194,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/o6oB9fwY'>Splunk Careers - Principal Android Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/o6oB9fwY'>Splunk Careers - Principal Android Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -210,11 +210,11 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/5eb93330-e29e-47b3-98bc-631f92bf3da0'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/5eb93330-e29e-47b3-98bc-631f92bf3da0'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -226,7 +226,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/f7b2c585-82a1-412c-87ef-265ce5138ef7'>vpTech - Android Developer H/F</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/f7b2c585-82a1-412c-87ef-265ce5138ef7'>vpTech - Android Developer H/F</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -347,7 +347,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
+<h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
     Android Developer at SignEasy
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -391,7 +391,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngDCBKwl&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngDCBKwl&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -410,7 +410,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<h5><a href='http://fincons.applytojob.com/apply/Ow0RNJgYP0/ANDROID-SENIOR-DEVELOPER'>ANDROID SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fincons.applytojob.com/apply/Ow0RNJgYP0/ANDROID-SENIOR-DEVELOPER'>ANDROID SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -434,7 +434,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205470-senior-android-developer'>Central 1 Credit Union Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205470-senior-android-developer'>Central 1 Credit Union Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -490,7 +490,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-01</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
